eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Marketing_Email_Addresses__c.object
<CustomObject>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_of_last_sent_email__c</fullName>
        <label>Status of last sent email</label>
        <picklist>
            <picklistValues>
                <fullName>Sent Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bounced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Known bounce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spam Report</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Marketing Email Addresses</label>
    <nameField>
        <displayFormat>MEA{0000}</displayFormat>
        <label>Marketing Email Addresses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Email Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>